<resources>
    <string name="app_name">Composers Quiz</string>
    <string name="question1">1. How many piano concertos were composed by Mozart?</string>
    <string name="question1answer1">17</string>
    <string name="question1answer2">21</string>
    <string name="question1answer3">23</string>
    <string name="question2">2. Which of these operas belong to Juiseppe Verdi?</string>
    <string name="question2answer1">\"Rigoletto\"</string>
    <string name="question2answer2">\"Pagliacci\"</string>
    <string name="question2answer3">\"Traviata\"</string>
    <string name="question3">3. Which composer\'s surname is encrypted here?</string>
    <string name="hint1">Write composer\'s surname</string>
    <string name="question4">4. Which composer became almost completely deaf by the end of his life?</string>
    <string name="question4answer1">Hector Berlioz</string>
    <string name="question4answer2">Béla Bartók</string>
    <string name="question4answer3">Ludwig van Beethoven</string>
    <string name="question5">5. Which of these works are created by Sergei Rachmaninoff?</string>
    <string name="question5answer1">Ballet \"Nutcracker\"</string>
    <string name="question5answer2">Rhapsody on a Theme of Paganini</string>
    <string name="question5answer3">Opera \"Aleko\"</string>
    <string name="question6">6. Guess the piece of music?</string>
    <string name="question6asnwer1">P.Tchaikovsky. Piano Concerto No.1 B-flat-moll</string>
    <string name="question6answer2">E.Grieg. Piano Concerto A-moll</string>
    <string name="question6answer3">S.Rachmaninoff. Piano Concerto No.3 d-moll</string>
    <string name="question7">7. Which of these operas are composed by Giacomo Puccini?</string>
    <string name="question7answer1">\"Tosca\"</string>
    <string name="question7answer2">\"The Barber of Seville\"</string>
    <string name="question7answer3">\"La bohème\"</string>
    <string name="question8">8. This composer is called \"the father of atonal music\";.</string>
    <string name="question8answer1">Richard Strauss</string>
    <string name="question8answer2">Arnold Schoenberg</string>
    <string name="question8answer3">Johannes Brahms</string>
    <string name="question9">9. Who is the author of this famous piece?</string>
    <string name="question10">10. Which of these composers where born in the 20th century?</string>
    <string name="question10answer1">Gustav Mahler</string>
    <string name="question10answer2">Dmitry Shostakovich</string>
    <string name="question10answer3">Alexander Scriabin</string>
    <string name="question10answer4">Franz Liszt</string>
    <string name="question10answer5">Samuel Barber</string>
    <string name="submitButton">Submit</string>
    <string name="resetButton">Reset</string>
    <string name="answer3">Bach</string>
    <string name="answer9">Wagner</string>
    <string name="toastImageDescription">Burning grand piano</string>
</resources>
